@@ -35,15 +35,10 @@ include the \code{position} viz-attribute.
   # Running demo
   demo(gexfigraph)
  
-  # A simple graph without
-  gexf1 <- read.gexf("http://gephi.org/datasets/LesMiserables.gexf")
+  fn <- system.file("gexf-graphs/lesmiserables.gexf", package = "rgexf")
+  gexf1 <- read.gexf(fn)
   igraph1 <- gexf.to.igraph(gexf1)
   gexf2 <- igraph.to.gexf(igraph1)
-  
-  # A graph with attributes  
-  gexf3 <- read.gexf("http://gexf.net/data/data.gexf")
-  igraph2 <- gexf.to.igraph(gexf3)
-  gexf4 <- igraph.to.gexf(igraph2)
  }
 }
 \author{
